7902534: replace Boolean constructor usages with Boolean::valueOf calls